--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -13,3 +13,33 @@
     justify-content: space-between;
 }
 
+.nav__link {
+  position: relative;
+  color: #2e363e;
+}
+
+.nav__notification {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: tomato;
+  color:white;
+  font-weight: 600;
+}
+
+.nav__dot {
+  position: absolute;
+  bottom: 30px;
+  left: 23px;
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: tomato;
+}
