--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -3,17 +3,16 @@
 }
 
 .user-component,
-.user-component__column {
+.user-component__column:first-child {
   display: flex;
   align-items: center;
 }
 
 .user-component__column:last-child {
-  color: rgba(0,0,0,0.5);
-}
-
-.user-component__column:last-child span {
-  margin-right: 5px;
+  color: rgba(0,0,0,0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 .user-component__avatar {
@@ -45,4 +44,9 @@
 .user-component__subtitle {
   margin-top: 8px;
   color: rgba(0,0,0, 0.5)
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 10px;
 }
