--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,6 @@
 .user-component {
   justify-content:space-between;
+  margin-bottom: 20px;
 }
 
 .user-component,
@@ -43,7 +44,7 @@
 
 .user-component__subtitle {
   margin-top: 8px;
-  color: rgba(0,0,0, 0.5)
+  color: var(--sub-color);
 }
 
 .user-component__time {
