--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -17,7 +17,7 @@
 .friends-screen__chanel{
   margin-top: 25px;
   padding-top: 15px;
-  border-top: 1px solid rgba(0,0,0,0.2);
+  border-top: 1px solid var(--main-border);
 }
 
 .friends-screen__chanel__header {
