--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import './components/badge.css';
 @import './components/dot.css';
 @import './components/icon-row.css';
+@import './components/alt-screen-header.css';
 /* Screen  */
 @import './screens/login.css';
 @import './screens/friends.css';
