--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,5 +1,5 @@
 .alt-header {
-  padding: 50px var(--horizontal-space);
+  padding: 50px var(--horizontal-space) 0;
   margin-bottom: 15px;
   display: flex;
   align-items: center;
@@ -11,35 +11,22 @@
   font-weight: 600;
 }
 
-.alt-header__column:first-child {
-  margin-right: auto;
+.alt-header__column {
+  width: 33%;
+}
+
+.alt-header__column:nth-child(2) {
+  display: flex;
+  justify-content: center;
 }
 
 .alt-header__column:last-child {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.alt-header__column:last-child i{
   margin-left: auto;
-}
-
-.settings__setting {
-  font-size: 1.3rem;
-  padding: 20px 0;
-  border-bottom: 1px solid rgba(0,0,0,0.1);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.settings__setting-column {
-  display: flex;
-  align-items: center;
-}
-
-.settings__setting-column i{
-  opacity: 0.8;
-  margin-right: 20px;
-  font-size: 1.5rem;
-}
-
-.settings__setting-column:last-child small {
-  font-size: 1rem;
-  color: var(--sub-color);
+  margin-left: 20px;
 }
