--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@
 @import './screens/friends.css';
 @import './screens/find.css';
 @import './screens/more.css';
+@import './screens/setting.css';
+@import './screens/chat.css';
 
 body {
   color: #2e363e;
