--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,26 +1,39 @@
 .nav {
-    position: fixed;
-    bottom: 0;
-    width:100%;
-    background-color: #f9f9fa;
-    padding: 20px 50px;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(121, 121, 121, 0.3);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #f9f9fa;
+  padding: 20px 50px;
+  box-sizing: border-box;
+  border-top: 1px solid rgba(121, 121, 121, 0.3);
 }
 
 .nav__list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__link {
   position: relative;
 }
 
+@keyframes notoficationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   position: absolute;
   bottom: 15px;
   left: 15px;
+  animation: notoficationAnimation 2s ease-in-out infinite;
 }
 
 .nav__dot {
@@ -28,4 +41,33 @@
   bottom: 30px;
   left: 23px;
   display: block;
+}
+
+@keyframes appearBtnAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(1) {
+  animation-delay: 0;
+}
+.nav__btn:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.nav__btn:nth-child(4) {
+  animation-delay: 0.9s;
 }
