--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -92,3 +92,65 @@
   margin-left: 5px;
 }
 
+.reply {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 25px;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.reply i {
+  opacity: 0.5;
+}
+
+.reply .reply__column:first-child {
+  width: 10%;
+  display: flex;
+  justify-content: center;
+}
+
+.reply .reply__column:last-child {
+  position: relative;
+  width: 90%;
+}
+
+.reply__column:last-child input {
+  width: 100%;
+  height: 30px;
+  padding: 15px;
+  box-sizing: border-box;
+  border: 1px solid var(--main-border);
+  border-radius: 20px;
+}
+
+.reply .reply__column:last-child > i,
+.reply .reply__column:last-child button {
+  position: absolute;
+  top: 1px;
+  right: 2px;
+}
+
+.reply .reply__column:last-child i {
+  right: 40px;
+  top:10px
+}
+
+.reply__column:last-child button {
+  background-color: var(--yellow);
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+}
+.reply__column:last-child button i {
+  opacity: 1;
+}
+.reply__column:last-child button:focus,
+.reply__column:last-child button:active {
+  outline: none;
+}
