--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -51,3 +51,22 @@
   animation: hideSplashScreen 0.4s ease-in-out forwards;
   animation-delay: 1.5s;
 }
+
+#no-moblie {
+  background-color: burlywood;
+  position: absolute;
+  z-index: 99;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+}
+
+@media screen and (max-width: 645px) {
+  #no-moblie {
+    display: none;
+  }
+}
